<resources>
    <string name="Att">ATTENZIONE!</string>
    <string name="msgAtt">La meta inserita non è corretta!</string>
    <string name="reimpostaMeta">Reimposta meta</string>
    <string name="apriRegole">Vai a regole</string>
    <string name="app_name">Angela Game</string>
    <string name="btnInvia">Invia</string>
    <string name="btn1">1</string>
    <string name="btn2">2</string>
    <string name="btn3">3</string>
    <string name="btn4">4</string>
    <string name="btn5">5</string>
    <string name="btn6">6</string>
    <string name="txtMeta">META:</string>
    <string name="edtMeta"></string>
    <string name="txtVinto">HAI VINTO</string>
    <string name="txtPerso">HAI PERSO</string>
    <string name="txtGiocata">GIOCATA:</string>
    <string name="btnGioca">INIZIA PARTITA</string>
    <string name="btnInfo">REGOLE</string>
    <string name="txtGiocUtente">UTENTE</string>
    <string name="txtGiocP101">P101</string>
    <string name="txtSomma">SOMMA</string>
    <string name="txtGiocUtente1"></string>
    <string name="txtGiocP101_2"></string>
    <string name="txtSomma1"></string>
    <string name="stampa1">%1$\n%2$s</string>
    <string name="txtAngelaGame">ANGELA GAME</string>
    <string name="txtRegole">LE REGOLE</string>
    <string name="txtTestoRegole">Nel campo META introdurre un numero compreso tra 30 e 100 e premere INVIA.\n\nAlla richiesta della giocata premere uno dei pulsanti numerati corrispondenti alla faccia di un dado da 1 a 6.\n\nNon è ammesso puntare la giocata precedente della controparte nè il numero della corrispondente faccia opposta del dado(1-6,2-5,3-4).\n\nVINCE chi raggiunge per primo esattamente la meta, PERDE chi supera la meta.\n</string>
    <string name="txtGioco"> GIOCA </string>
    <string name="btnHome">TORNA ALLA HOME</string>
    <string name="imgDado"></string>
    <string name="imgLogo"></string>
    <string name="imgIndietro"></string>
</resources>
