<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000080">

    <TextView
        android:id="@+id/txtGioco"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="casual"
        android:text="@string/txtGioco"
        android:textColor="#66FF00"
        android:textSize="45sp"
        android:textStyle="bold"
        android:typeface="monospace"
        app:layout_constraintBottom_toTopOf="@+id/guideline32"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline32"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.15" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline33"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.55" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline34"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.60" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline35"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline37"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.15" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline38"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.37" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline39"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.61" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline40"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.85" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline41"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.25" />

    <ImageView
        android:id="@+id/btnHome"
        android:layout_width="25dp"
        android:layout_height="20dp"
        android:contentDescription="@string/imgIndietro"
        app:layout_constraintBottom_toTopOf="@+id/guideline43"
        app:layout_constraintEnd_toStartOf="@+id/guideline35"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/indietro" />

    <TextView
        android:id="@+id/txtGiocUtente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="casual"
        android:text="@string/txtGiocUtente"
        android:textAlignment="center"
        android:textColor="#FF4500"
        android:textStyle="bold"
        android:typeface="monospace"
        app:layout_constraintBottom_toTopOf="@+id/guideline34"
        app:layout_constraintEnd_toStartOf="@+id/guideline38"
        app:layout_constraintHorizontal_bias="0.3"
        app:layout_constraintStart_toStartOf="@+id/guideline37"
        app:layout_constraintTop_toTopOf="@+id/guideline33"
        app:layout_constraintVertical_bias="1.0" />


    <TextView
        android:id="@+id/txtGiocP101"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="casual"
        android:text="@string/txtGiocP101"
        android:textAlignment="center"
        android:textColor="#FF4500"
        android:textStyle="bold"
        android:typeface="monospace"
        app:layout_constraintBottom_toTopOf="@+id/guideline34"
        app:layout_constraintEnd_toStartOf="@+id/guideline39"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="@+id/guideline38"
        app:layout_constraintTop_toTopOf="@+id/guideline33"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/txtSomma"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="casual"
        android:text="@string/txtSomma"
        android:textAlignment="center"
        android:textColor="#FF4500"
        android:textStyle="bold"
        android:typeface="monospace"
        app:layout_constraintBottom_toTopOf="@+id/guideline34"
        app:layout_constraintEnd_toStartOf="@+id/guideline40"
        app:layout_constraintHorizontal_bias="0.3"
        app:layout_constraintStart_toStartOf="@+id/guideline39"
        app:layout_constraintTop_toTopOf="@+id/guideline33"
        app:layout_constraintVertical_bias="1.0" />


    <ScrollView
        android:id="@+id/scroll1"
        android:layout_width="50dp"
        android:layout_height="200dp"
        android:scrollbars="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline38"
        app:layout_constraintHorizontal_bias="0.3"
        app:layout_constraintStart_toStartOf="@+id/guideline37"
        app:layout_constraintTop_toTopOf="@+id/guideline34"
        app:layout_constraintVertical_bias="0.25">

        <TextView
            android:id="@+id/txtGiocUtente1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="casual"
            android:inputType="textMultiLine"
            android:scrollbars="none"
            android:text="@string/txtGiocUtente1"
            android:textAlignment="center"
            android:textColor="#FF4500"
            android:textSize="18sp"
            android:textStyle="bold"
            android:typeface="monospace"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guideline38"
            app:layout_constraintHorizontal_bias="0.35"
            app:layout_constraintStart_toStartOf="@+id/guideline37"
            app:layout_constraintTop_toTopOf="@+id/guideline34"
            app:layout_constraintVertical_bias="0.13999999"
            tools:ignore="TextViewEdits" />

    </ScrollView>

    <ScrollView
        android:id="@+id/scroll2"
        android:layout_width="50dp"
        android:layout_height="200dp"
        android:scrollbars="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline39"
        app:layout_constraintHorizontal_bias="0.3"
        app:layout_constraintStart_toStartOf="@+id/guideline38"
        app:layout_constraintTop_toTopOf="@+id/guideline34"
        app:layout_constraintVertical_bias="0.25">

        <TextView
            android:id="@+id/txtGiocP101_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="casual"
            android:inputType="textMultiLine"
            android:scrollbars="none"
            android:text="@string/txtGiocP101_2"
            android:textAlignment="center"
            android:textColor="#FF4500"
            android:textSize="18sp"
            android:textStyle="bold"
            android:typeface="monospace"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guideline39"
            app:layout_constraintHorizontal_bias="0.4"
            app:layout_constraintStart_toStartOf="@+id/guideline38"
            app:layout_constraintTop_toTopOf="@+id/guideline34"
            app:layout_constraintVertical_bias="0.14999998"
            tools:ignore="TextViewEdits" />
    </ScrollView>


    <ScrollView
        android:id="@+id/scroll3"
        android:layout_width="50dp"
        android:layout_height="200dp"
        android:scrollbars="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline40"
        app:layout_constraintHorizontal_bias="0.3"
        app:layout_constraintStart_toStartOf="@+id/guideline39"
        app:layout_constraintTop_toTopOf="@+id/guideline34"
        app:layout_constraintVertical_bias="0.25">

        <TextView
            android:id="@+id/txtSomma1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="casual"
            android:inputType="textMultiLine"
            android:scrollbars="none"
            android:text="@string/txtSomma1"
            android:textAlignment="center"
            android:textColor="#FF4500"
            android:textSize="18sp"
            android:textStyle="bold"
            android:typeface="monospace"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guideline40"
            app:layout_constraintHorizontal_bias="0.3"
            app:layout_constraintStart_toStartOf="@+id/guideline39"
            app:layout_constraintTop_toTopOf="@+id/guideline34"
            app:layout_constraintVertical_bias="0.13999999"
            tools:ignore="TextViewEdits" />
    </ScrollView>

    <TextView
        android:id="@+id/txtMeta"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:fontFamily="casual"
        android:text="@string/txtMeta"
        android:textAlignment="viewStart"
        android:textColor="#FF4500"
        android:textStyle="bold"
        android:typeface="monospace"
        app:layout_constraintBottom_toTopOf="@+id/guideline41"
        app:layout_constraintEnd_toStartOf="@+id/guideline39"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline37"
        app:layout_constraintTop_toTopOf="@+id/guideline43"
        app:layout_constraintVertical_bias="0.31" />

    <TextView
        android:id="@+id/txtGiocata"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="casual"
        android:text="@string/txtGiocata"
        android:textAlignment="viewStart"
        android:textColor="#FF4500"
        android:textStyle="bold"
        android:typeface="monospace"
        app:layout_constraintBottom_toTopOf="@+id/guideline36"
        app:layout_constraintEnd_toStartOf="@+id/guideline38"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline37"
        app:layout_constraintTop_toTopOf="@+id/guideline41" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline43"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.1" />

    <EditText
        android:id="@+id/edtMeta"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:autofillHints="@string/edtMeta"
        android:backgroundTint="#FF4500"
        android:ems="10"
        android:fontFamily="casual"
        android:inputType="number"
        android:text="@string/edtMeta"
        android:textAlignment="center"
        android:textColor="#FF4500"
        android:textSize="20sp"
        android:textStyle="bold"
        android:typeface="monospace"
        app:layout_constraintBottom_toTopOf="@+id/guideline41"
        app:layout_constraintEnd_toStartOf="@+id/guideline39"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline37"
        app:layout_constraintTop_toTopOf="@+id/guideline32"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="Labelfor"
        tools:targetApi="o" />

    <Button
        android:id="@+id/btnInvia"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:background="@drawable/pulsanti_start"
        android:fontFamily="casual"
        android:text="@string/btnInvia"
        android:textAlignment="center"
        android:textColor="#FF4500"
        android:textStyle="bold"
        android:typeface="monospace"
        app:layout_constraintBottom_toTopOf="@+id/guideline41"
        app:layout_constraintEnd_toStartOf="@+id/guideline40"
        app:layout_constraintStart_toStartOf="@+id/guideline39"
        app:layout_constraintTop_toTopOf="@+id/guideline32"
        app:layout_constraintVertical_bias="0.0" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline44"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.42" />

    <Button
        android:id="@+id/btn1"
        android:layout_width="70dp"
        android:layout_height="65dp"
        android:background="@drawable/pulsanti_grigi"
        android:fontFamily="casual"
        android:text="@string/btn1"
        android:textAlignment="center"
        android:textColor="#FF4500"
        android:textSize="20sp"
        android:textStyle="bold"
        android:typeface="monospace"
        app:layout_constraintBottom_toTopOf="@+id/guideline44"
        app:layout_constraintEnd_toStartOf="@+id/guideline38"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline37"
        app:layout_constraintTop_toTopOf="@+id/guideline36" />

    <Button
        android:id="@+id/btn2"
        android:layout_width="70dp"
        android:layout_height="65dp"
        android:background="@drawable/pulsanti_grigi"
        android:fontFamily="casual"
        android:text="@string/btn2"
        android:textAlignment="center"
        android:textColor="#FF4500"
        android:textSize="20sp"
        android:textStyle="bold"
        android:typeface="monospace"
        app:layout_constraintBottom_toTopOf="@+id/guideline44"
        app:layout_constraintEnd_toStartOf="@+id/guideline39"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline38"
        app:layout_constraintTop_toTopOf="@+id/guideline36" />

    <Button
        android:id="@+id/btn3"
        android:layout_width="70dp"
        android:layout_height="65dp"
        android:background="@drawable/pulsanti_grigi"
        android:fontFamily="casual"
        android:text="@string/btn3"
        android:textAlignment="center"
        android:textColor="#FF4500"
        android:textSize="20sp"
        android:textStyle="bold"
        android:typeface="monospace"
        app:layout_constraintBottom_toTopOf="@+id/guideline44"
        app:layout_constraintEnd_toStartOf="@+id/guideline40"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline39"
        app:layout_constraintTop_toTopOf="@+id/guideline36" />

    <Button
        android:id="@+id/btn4"
        android:layout_width="70dp"
        android:layout_height="65dp"
        android:background="@drawable/pulsanti_grigi"
        android:fontFamily="casual"
        android:text="@string/btn4"
        android:textAlignment="center"
        android:textColor="#FF4500"
        android:textSize="20sp"
        android:textStyle="bold"
        android:typeface="monospace"
        app:layout_constraintBottom_toTopOf="@+id/guideline33"
        app:layout_constraintEnd_toStartOf="@+id/guideline38"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline37"
        app:layout_constraintTop_toTopOf="@+id/guideline44" />

    <Button
        android:id="@+id/btn5"
        android:layout_width="70dp"
        android:layout_height="65dp"
        android:background="@drawable/pulsanti_grigi"
        android:fontFamily="casual"
        android:text="@string/btn5"
        android:textAlignment="center"
        android:textColor="#FF4500"
        android:textSize="20sp"
        android:textStyle="bold"
        android:typeface="monospace"
        app:layout_constraintBottom_toTopOf="@+id/guideline33"
        app:layout_constraintEnd_toStartOf="@+id/guideline39"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline38"
        app:layout_constraintTop_toTopOf="@+id/guideline44" />

    <Button
        android:id="@+id/btn6"
        android:layout_width="70dp"
        android:layout_height="65dp"
        android:background="@drawable/pulsanti_grigi"
        android:fontFamily="casual"
        android:text="@string/btn6"
        android:textAlignment="center"
        android:textColor="#FF4500"
        android:textSize="20sp"
        android:textStyle="bold"
        android:typeface="monospace"
        app:layout_constraintBottom_toTopOf="@+id/guideline33"
        app:layout_constraintEnd_toStartOf="@+id/guideline40"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline39"
        app:layout_constraintTop_toTopOf="@+id/guideline44" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline36"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.30" />

</android.support.constraint.ConstraintLayout>